# arki-3d-APP

./: .gitattributes  .gitignore  .tauri.env  CLAUDE.md  PROJECT_LOG.md  PROJECT_LOG.txt  README.md  capacitor.config.ts  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  railway.json  turbo.json  로그문서.txt
.github/workflows/: build-apk.yml  build-desktop.yml
android/app/: build.gradle
android/app/src/main/java/com/arki/spaceplanner/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: .env.example  SpacePlanner_MVP_v2.0_시공수주_AI챗봇.docx  ai-chatbot-spec.md  apk-build-guide.md  db-schema.md  desktop-build-guide.md  plan.md  research.md  sprint-2-plan.md  sprint-3-plan.md  sprint-4-plan.md  sprint-5-plan.md  sprint-6-plan.md  sprint-7-plan.md  sprint-8-plan.md  sprint-roadmap.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
